added page container

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
         <meta name="robots" content="all" /> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-        <link href="style.css" rel="stylesheet" type="text/css" /> 
  
  
     </head> 
     <body> 
-	
+	   <div class="container">
+        <ul>
+          <li>asd</li>
+          <li>glgk</li>  
+        </ul>   
+       </div>
 	</body>
 </html>
