added more list items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	   <div class="container">
         <ul>
           <li>asd</li>
-          <li>glgk</li>  
+          <li>glgk</li>
+          <li>tekstas kitoks</li>
+          <li>dar teksto</li>
         </ul>   
        </div>
 	</body>
