--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li>glgk</li>
           <li>tekstas</li>
           <li>tekstas</li> 
+          <li>naujas li</li>
         </ul>   
        </div>
 	</body>
