--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </head> 
     <body> 
 	   <div class="container">
+       <span>ikonele grazi</span>
         <ul>
           <li>asd</li>
           <li>glgk</li>
