--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <li>tekstas</li>
           <li>tekstas</li> 
           <li>naujas li</li>
+          <li>add new line :)</li>
         </ul>   
        </div>
 	</body>
