--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </head> 
     <body> 
 	   <div class="container">
+      <img src="images/hello.gif">
+      <br>
        <span>ikonele grazi</span>
         <ul>
           <li>asd</li>
@@ -25,7 +27,10 @@
           <li>tekstas</li> 
           <li>naujas li</li>
           <li>add new line :)</li>
-        </ul>   
+        </ul>  
+        <br>
+        <h2 style="background-color: red; color: white"><font size="6"><em>Sveiki sulauke rudens!</em></font></h2>
+        <img src="images/autumn.gif">
        </div>
 	</body>
 </html>
