Fixed spacing. Problem?

--- a/index.html
+++ b/index.html
@@ -16,15 +16,36 @@
  
     </head> 
     <body> 
-	   <div class="container">
-       <span>ikonele grazi</span>
-        <ul>
-          <li>asd</li>
-          <li>glgk</li>
-          <li>tekstas</li>
-          <li>tekstas</li> 
-          <li>naujas li</li>
-        </ul>   
-       </div>
+	    <div class="container">
+        <span>ikonele grazi</span>
+	        <ul>
+		        <li>asd</li>			<!-- Sutaisiau tuos prakeiktus tarpus. -->
+		        <li>glgk</li>
+		        <li>tekstas</li>
+		        <li>tekstas</li> 
+		        <li>naujas li</li>
+		        <li>
+			        ░░░░░░░░▄▀▀████████▀██████▄▄▄▄▄▄░░░░░░░░<br>
+					░░░░░░▄▀░▄▀░░▄▄▄▄▄░▀▄▄▄▄▄▄▀▀▀▄▄░▀▄░░░░░░<br>
+					░░░░▄▀░░▀░▄▄▀░░░░░▀█▄░░░▄▀▀▀▀▄▀▀░░█░░░░░<br>
+					░░░▄▀░░░░▄▀░▄███▀▀▄░▀░░█░▄▄▄▄▄░░▄▄█▄░░░░<br>
+					░▄▀░░▄▀▀▄░░▀▀░▄▀▀▀██░░░██▀▀▀░▀▀░▀▀▀██▄░░<br>
+					█░░▄▀░▄▄░▀▀░▀▀░░▄░▄▄░░░░█▄░░▄▄▀▀▀█▄░██░░<br>
+					▀░░▀░▀▀░▀▀░░░░░▀░▀░░░░░░░▀▀▀░░░░░░░░░░░░<br>
+					▄▄▄▄░░▄▄▄▄░░░▄▄▄░░▄▄▄▄░░▄▄░░░▄▄▄░▄▄░░░▄▄<br>
+					██░██░██░██░██░██░██▄█▀░██░░░██▄░███▄███<br>
+					██▀▀░░██▀█▄░██░██░██░██░██░░░██▀░██▀█▀██<br>
+					██░░░░██░██░▀█▄█▀░████▀░████░███░██░░░██<br>
+					░░░░░░░░░░░░░░░░░░░▄▄▄▄░░░░░░░░░░░░░░░░░<br>
+					░░░░░░░░░░░░░░░░▄███▀▀▀██▄░░░░░░░░░░░░░░<br>
+					░░░░░░░░░░░░░░░░███░░░░░███░░░░░░░░░░░░░<br>
+					░░░░░░░░░░░░░░░░░░░░▄▄▄██▀░░░░░░░░░░░░░░<br>
+					░░░░░░░░░░░░░░░░░░░██▀▀░░░░░░░░░░░░░░░░░<br>
+					░░░░░░░░░░░░░░░░░░░██░░░░░░░░░░░░░░░░░░░<br>
+					░░░░░░░░░░░░░░░░░░░▄▄░░░░░░░░░░░░░░░░░░░<br>
+					░░░░░░░░░░░░░░░░░░░▀▀░░░░░░░░░░░░░░░░░░░<br>
+				</li>
+	        </ul>   
+        </div>
 	</body>
 </html>
